[workspace]
members = [
    "crates/rust-press",
    "crates/rustpress-core",
    "crates/rustpress-dev",
    "crates/rustpress-md",
    "crates/rustpress-search",
    "crates/rustpress-theme",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/ZenithInc/rust-press"
homepage = "https://github.com/ZenithInc/rust-press"
rust-version = "1.93"
version = "0.1.10"

[workspace.dependencies]
anyhow = "1.0.98"
brotli = "8.0.1"
clap = { version = "4.5.39", features = ["derive"] }
notify = "8.0.0"
once_cell = "1.21.3"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.20.0"
tiny_http = "0.12.0"
toml = "0.8.22"
walkdir = "2.5.0"

[profile.release]
lto = true
strip = true
