[package]
name = "rustpress-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rust-press"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rustpress-core = { path = "../rustpress-core" }
rustpress-dev = { path = "../rustpress-dev" }
