[package]
name = "rustpress-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
brotli.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
rustpress-md = { path = "../rustpress-md" }
rustpress-search = { path = "../rustpress-search" }
rustpress-theme = { path = "../rustpress-theme" }

[dev-dependencies]
tempfile.workspace = true
