[package]
name = "rustpress-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rustpress-core"
description = "Core configuration, routing, and build pipeline for RustPress"
readme = "../../README.md"
keywords = ["docs", "documentation", "static-site", "markdown"]
categories = ["web-programming"]
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
brotli.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
rustpress-md = { version = "0.1.1", path = "../rustpress-md" }
rustpress-search = { version = "0.1.1", path = "../rustpress-search" }
rustpress-theme = { version = "0.1.1", path = "../rustpress-theme" }

[dev-dependencies]
tempfile.workspace = true
