[package]
name = "rustpress-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
notify.workspace = true
tiny_http.workspace = true
rustpress-core = { path = "../rustpress-core" }
