[package]
name = "rustpress-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rustpress-dev"
description = "Development and preview servers for RustPress"
readme = "../../README.md"
keywords = ["docs", "development-server", "static-site", "markdown"]
categories = ["web-programming"]
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
notify.workspace = true
tiny_http.workspace = true
rustpress-core = { version = "0.1.7", path = "../rustpress-core" }
