[package]
name = "rustpress-md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rustpress-md"
description = "Markdown parsing and HTML rendering for RustPress"
readme = "../../README.md"
keywords = ["markdown", "docs", "documentation", "html"]
categories = ["parser-implementations", "web-programming"]
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
syntect = "5.3.0"
