[package]
name = "rustpress-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rustpress-search"
description = "Local search index builder for RustPress"
readme = "../../README.md"
keywords = ["search", "docs", "documentation", "static-site"]
categories = ["web-programming"]
rust-version.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
sha2.workspace = true
