[package]
name = "rustpress-theme"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rustpress-theme"
description = "Default static documentation theme for RustPress"
readme = "../../README.md"
keywords = ["docs", "theme", "static-site", "markdown"]
categories = ["web-programming"]
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rustpress-md = { version = "0.1.5", path = "../rustpress-md" }
